Head, banner e footer

--- a/que-filme/index.html
+++ b/que-filme/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <title>Document</title>
+    <title>Que filme!</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +10,42 @@
     <meta name="keywords" content="...">
     <link rel="stylesheet" href="css/app.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/797e057ed0.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <nav>
             <div class="nav">
-                <img src="/img/que-filme-logo.png" alt="logo" class="img-nav">
-                <input type="text" class="nav-input">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <img src="/img/que-filme-logo.png" alt="logo">
+                <div class="nav-search">
+                    <input type="text" placeholder="Pesquisar">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
             </div>
         </nav>
     </header>
     <main>
-        <h1>
-
-        </h1>
     </main>
     <section>
+        <div class="section-main-div">
+            <h2>O que assistir hoje?</h2>
+        </div>
+        <div class="catalog">
 
+        </div>
     </section>
     <footer>
-        
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin-in"></i>
+        <!-- colocar imagem TMDB e declaração deles -->
+
+
     </footer>
 </body>
+
 </html>
