--- a/que-filme/index.html
+++ b/que-filme/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="...">
     <meta name="keywords" content="...">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <link rel="stylesheet" href="css/app.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -22,7 +23,7 @@
             <div class="nav">
                 <img src="/img/que-filme-logo.png" alt="logo">
                 <div class="nav-search">
-                    <input type="text" placeholder="Pesquisar">
+                    <input type="text" placeholder="Que filme?">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
@@ -39,11 +40,13 @@
         </div>
     </section>
     <footer>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <!-- colocar imagem TMDB e declaração deles -->
-
+        <div class="footer-social-networks">
+            <a href="https://www.instagram.com/marcosnogmatos/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/NogueiraMatos" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/marcos-matos-81a178235/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+        <img src="/img/TMDB-logo2.svg" alt="logo TMDB">
+        <p class="footer-notice">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
 
     </footer>
 </body>
