--- a/que-filme/index.html
+++ b/que-filme/index.html
@@ -14,7 +14,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/797e057ed0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,8 +22,8 @@
             <div class="nav">
                 <img src="/img/que-filme-logo.png" alt="logo">
                 <div class="nav-search">
-                    <input type="text" placeholder="Que filme?">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input id="searchInput" type="text" placeholder="Que filme?">
+                    <i id="searchIcon" class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
         </nav>
@@ -35,20 +34,27 @@
         <div class="section-main-div">
             <h2>O que assistir hoje?</h2>
         </div>
-        <div class="catalog">
-
+        <div id="catalog" class="catalog">
+            
         </div>
     </section>
     <footer>
         <div class="footer-social-networks">
-            <a href="https://www.instagram.com/marcosnogmatos/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/marcosnogmatos/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/NogueiraMatos" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/marcos-matos-81a178235/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/marcos-matos-81a178235/" target="_blank"><i
+                    class="fa-brands fa-linkedin-in"></i></a>
         </div>
         <img src="/img/TMDB-logo2.svg" alt="logo TMDB">
         <p class="footer-notice">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
 
     </footer>
+    <script src="https://kit.fontawesome.com/797e057ed0.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
