--- a/que-filme/movie.html
+++ b/que-filme/movie.html
@@ -28,34 +28,19 @@
             </div>
         </nav>
     </header>
-    <main>
-    </main>
     <section>
-        <div class="section-main-div">
-            <h2>O que assistir hoje?</h2>
-        </div>
-        <div id="catalog" class="catalog">
-        </div>
-        <div id="catalog-more" class="catalog-more">
+        <div id="movie-selection" class="movie-selection">
+
         </div>
     </section>
-    <footer>
-        <div class="footer-social-networks">
-            <a href="https://www.instagram.com/marcosnogmatos/" target="_blank"><i
-                    class="fa-brands fa-instagram"></i></a>
-            <a href="https://github.com/NogueiraMatos" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/marcos-matos-81a178235/" target="_blank"><i
-                    class="fa-brands fa-linkedin-in"></i></a>
-        </div>
-        <img src="/img/TMDB-logo2.svg" alt="logo TMDB">
-        <p>This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
-
-    </footer>
     <script src="https://kit.fontawesome.com/797e057ed0.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/app.js"></script>
+    <script>
+        loadMoviePage()
+    </script>
 </body>
 
 </html>
