--- a/que-filme/index.html
+++ b/que-filme/index.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main id="main">
     </main>
     <section>
         <div class="section-main-div">
@@ -49,7 +49,6 @@
         </div>
         <img src="/img/TMDB-logo2.svg" alt="logo TMDB">
         <p>This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
-
     </footer>
     <script src="https://kit.fontawesome.com/797e057ed0.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
